RESOLVED FIXED226449
Fix thread safety issues in ConvolverNode
https://bugs.webkit.org/show_bug.cgi?id=226449
Summary Fix thread safety issues in ConvolverNode
Chris Dumez
Reported 2021-05-30 20:40:38 PDT
Adopt thread safety annotations in ConvolverNode and fix bugs found by clang.
Attachments
Patch (7.06 KB, patch)
2021-05-30 20:47 PDT, Chris Dumez
darin: review+
Chris Dumez
Comment 1 2021-05-30 20:47:41 PDT
Chris Dumez
Comment 2 2021-05-31 17:09:49 PDT
Radar WebKit Bug Importer
Comment 3 2021-05-31 17:10:20 PDT
Note You need to log in before you can comment on or make changes to this bug.