Source/WebCore/Modules/webaudio/ConvolverNode.h
@@ -41,11 +41,11 @@ public:
     
     virtual ~ConvolverNode();
     
-    ExceptionOr<void> setBuffer(RefPtr<AudioBuffer>&&);
-    AudioBuffer* buffer();
+    ExceptionOr<void> setBufferForBindings(RefPtr<AudioBuffer>&&);
+    AudioBuffer* bufferForBindings(); // Only safe to call on the main thread.
 
-    bool normalize() const { return m_normalize; }
-    void setNormalize(bool normalize) { m_normalize = normalize; }
+    bool normalizeForBindings() const WTF_IGNORES_THREAD_SAFETY_ANALYSIS { ASSERT(isMainThread()); return m_normalize; }
+    void setNormalizeForBindings(bool);
 
     ExceptionOr<void> setChannelCount(unsigned) final;
     ExceptionOr<void> setChannelCountMode(ChannelCountMode) final;
@@ -60,14 +60,14 @@ private:
     void process(size_t framesToProcess) final;
     void checkNumberOfChannelsForInput(AudioNodeInput*) final;
 
-    std::unique_ptr<Reverb> m_reverb;
-    RefPtr<AudioBuffer> m_buffer;
+    std::unique_ptr<Reverb> m_reverb WTF_GUARDED_BY_LOCK(m_processLock); // Only modified on the main thread but accessed on the audio thread.
+    RefPtr<AudioBuffer> m_buffer WTF_GUARDED_BY_LOCK(m_processLock); // Only modified on the main thread but accessed on the audio thread.
 
     // This synchronizes dynamic changes to the convolution impulse response with process().
     mutable Lock m_processLock;
 
     // Normalize the impulse response or not.
-    bool m_normalize { true };
+    bool m_normalize { true }; // Only used on the main thread.
 };
 
 } // namespace WebCore
